# cpp-serde

./: CMakeLists.txt  LICENSE  README.md  sample.cpp  sample.yml
include/serde/: cbor.h  json.h  msgpack.h  serde.h  serde_all.h  toml.h  ubjson.h  yaml.h
test/: CMakeLists.txt  test-basics.cpp
